# glpi-followup-translate

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  config.yaml.example  pyproject.toml  requirements.txt  test_integration.py  test_single_ticket.py  test_translate.py
.github/workflows/: publish.yml
glpi_followup_translate/: __init__.py  __main__.py  config.py  glpi_client.py  main.py  ollama_client.py
scripts/: glpi-session-cleanup.cron  glpi-session-cleanup.sh  php-session-config.ini
